--- a/grid-packages/ag-grid-docs/documentation/src/components/search/SearchModal/components/Controls/Controls.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/components/search/SearchModal/components/Controls/Controls.module.scss
@@ -3,6 +3,10 @@
     display: grid;
     grid-gap: 15px;
     grid-template-columns: 1fr max-content max-content max-content;
-    border-top: 1px solid rgba(234, 236, 240, 1);
+    border-top: 1px solid var(--color-border-primary);
     padding: 29px 24px;
+}
+
+.keyboardSection img { 
+    padding-right: 12px;
 }
