--- a/grid-packages/ag-grid-docs/documentation/src/components/search/SearchModal/components/Modal/Modal.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/components/search/SearchModal/components/Modal/Modal.module.scss
@@ -22,7 +22,7 @@
     top: 50px;
     left: 50%;
     transform: translateX(-50%);
-    background: white;
+    background: var(--color-bg-primary);
     border-radius: 12px;
     box-shadow: 0px 25px 50px -12px rgba(16, 24, 40, 0.25);
     overflow: hidden;
