--- a/grid-packages/ag-grid-docs/documentation/src/components/search/SearchModal/components/SearchBox/SearchBox.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/components/search/SearchModal/components/SearchBox/SearchBox.module.scss
@@ -1,7 +1,7 @@
 .container {
     display: flex;
     padding: 27px 24px;
-    border-bottom: 1px solid rgba(234, 236, 240, 1);
+    border-bottom: 1px solid var(--color-border-primary);
     cursor: text;
 }
 .inputEle {
@@ -15,4 +15,38 @@
 .resultCount {
     font-size: 14px;
     line-height: 28px;
+}
+
+.searchBox {
+    display: flex;
+    align-items: center;
+    position: relative;
+    border-radius: var(--radius-md);
+    background-color: var(--color-bg-primary);
+    padding-right: 16px;
+
+        width: 100%;
+        padding-top: 0.4375em;
+        padding-bottom: 0.4375em;
+        padding-left: 2em;
+
+        &::-webkit-search-decoration,
+        &::-webkit-search-cancel-button {
+            display: none;
+        }
+    
+
+    :global(.icon) {
+        --icon-size: 1.25em;
+        --color-icon: var(--color-fg-secondary);
+
+        position: absolute;
+        left: 0.625em;
+    }
+}
+
+input[type='search'].resultsOpen {
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+    padding-right: 80px;
 }
