AG-10421 - Tidy up search Sass

--- a/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SearchBox.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SearchBox.module.scss
@@ -1,17 +1,21 @@
+@use '../core' as *;
+
 .container {
     display: flex;
     padding: 27px 24px;
     border-bottom: 1px solid var(--color-border-primary);
     cursor: text;
 }
+
 .inputEle {
     all: unset;
     flex: 1;
+    margin: 0 17px;
     font-size: 20px;
     line-height: 28px;
-    margin: 0 17px;
     outline: none;
 }
+
 .resultCount {
     font-size: 14px;
     line-height: 28px;
@@ -21,20 +25,15 @@
     display: flex;
     align-items: center;
     position: relative;
+    width: 100%;
+    padding: 7px 16px 7px 32px;
     border-radius: var(--radius-md);
     background-color: var(--color-bg-primary);
-    padding-right: 16px;
 
-        width: 100%;
-        padding-top: 0.4375em;
-        padding-bottom: 0.4375em;
-        padding-left: 2em;
-
-        &::-webkit-search-decoration,
-        &::-webkit-search-cancel-button {
-            display: none;
-        }
-    
+    &::-webkit-search-decoration,
+    &::-webkit-search-cancel-button {
+        display: none;
+    }
 
     :global(.icon) {
         --icon-size: 1.25em;
@@ -46,7 +45,7 @@
 }
 
 input[type='search'].resultsOpen {
+    padding-right: 80px;
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
-    padding-right: 80px;
 }
