--- a/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SearchModal.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SearchModal.module.scss
@@ -1,5 +1,6 @@
+@use '../core' as *;
+
 .backdrop {
-    z-index: 1;
     position: fixed;
     top: 0;
     left: 0;
@@ -7,14 +8,17 @@
     height: 100vh;
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-
+    z-index: 1;
     animation: fadeIn 0.5s;
 }
 
 @keyframes fadeIn {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 .container {
