AG-10421 - Refactor & style search hits

--- a/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SearchControls.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SearchControls.module.scss
@@ -29,7 +29,7 @@
     box-shadow: var(--shadow-xs);
 
     #{$selector-darkmode} & {
-        background-color: var(--color-bg-primary);
+        background-color: var(--color-border-tertiary);
     }
 
     + .kbdIcon {
