--- a/grid-packages/ag-grid-docs/documentation/src/design-system/modules/Search.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/modules/Search.module.scss
@@ -5,26 +5,44 @@
     align-items: center;
     position: relative;
     width: 100%;
-    padding: 7px 16px 7px 32px;
+    padding: $spacing-size-2 $spacing-size-4;
     border-radius: var(--radius-md);
-    background-color: var(--color-bg-primary);
+    background-color: rgba(0, 0, 0, 0.1);
+    color: var(--color-white);
+    cursor: pointer;
 
     &::-webkit-search-decoration,
     &::-webkit-search-cancel-button {
         display: none;
     }
 
-    :global(.icon) {
-        --icon-size: 1.25em;
-        --color-icon: var(--color-fg-secondary);
+    &:hover .placeholder,
+    &:hover :global(.icon) {
+        opacity: 0.7;
+    }
 
-        position: absolute;
-        left: 0.625em;
+    &:hover .kbdShortcut {
+        opacity: 1;
+    }
+
+    > * {
+        transition: opacity $transition-default-timing;
+    }
+
+    :global(.icon) {
+        --icon-size: 18px;
+        --color-icon: var(--color-white);
+
+        margin-right: $spacing-size-1;
+        opacity: 0.5;
     }
 }
 
-input[type='search'].resultsOpen {
-    padding-right: 80px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
+.placeholder {
+    opacity: 0.5;
+}
+
+.kbdShortcut {
+    margin-left: auto;
+    opacity: 0.8;
 }
