--- a/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SiteHeader.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SiteHeader.module.scss
@@ -54,6 +54,7 @@
 
     @media screen and (min-width: $breakpoint-docs-nav-medium) {
         display: contents;
+        max-width: 320px;
     }
 
     @media screen and (min-width: $breakpoint-site-header-small) {
@@ -63,7 +64,6 @@
     @media screen and (min-width: $breakpoint-site-header-medium) {
         display: flex;
         order: unset;
-        width: unset;
         margin: 0 0 0 auto;
     }
 }
@@ -253,9 +253,7 @@ button.navLink {
     font-weight: 500;
     letter-spacing: 0.01em;
     color: var(--color-white);
-    transition:
-        color $transition-default-timing,
-        opacity $transition-default-timing;
+    transition: color $transition-default-timing, opacity $transition-default-timing;
     cursor: pointer;
 
     @at-root button#{&} {
@@ -282,9 +280,7 @@ button.navLink {
             background-color: var(--color-white);
             opacity: 0;
             transform: scaleX(0);
-            transition:
-                transform 0.33s ease-in-out,
-                opacity 0.33s ease-in-out;
+            transition: transform 0.33s ease-in-out, opacity 0.33s ease-in-out;
         }
     }
 
@@ -327,9 +323,7 @@ button.navLink {
         }
 
         .navLink:hover svg {
-            box-shadow:
-                0 0 0 4px var(--color-bg-site-header),
-                0 0 0 6px rgba(white, 0.3);
+            box-shadow: 0 0 0 4px var(--color-bg-site-header), 0 0 0 6px rgba(white, 0.3);
         }
     }
 }
