--- a/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SearchModal.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SearchModal.module.scss
@@ -26,12 +26,11 @@
     top: 50px;
     left: 50%;
     transform: translateX(-50%);
+    width: 750px;
+    max-width: calc(100vw - #{$spacing-size-8});
+    max-height: calc(100vh - 100px);
     background: var(--color-bg-primary);
     border-radius: 12px;
     box-shadow: 0px 25px 50px -12px rgba(16, 24, 40, 0.25);
     overflow: hidden;
-    max-height: calc(100vh - 100px);
-
-    // temp during dev
-    width: 750px;
 }
