--- a/grid-packages/ag-grid-docs/documentation/src/design-system/modules/Search.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/modules/Search.module.scss
@@ -11,6 +11,11 @@
     color: var(--color-white);
     cursor: pointer;
 
+    #{$selector-darkmode} & {
+        background-color: var(--color-gray-900);
+        border: 1px solid var(--color-gray-700);
+    }
+
     &::-webkit-search-decoration,
     &::-webkit-search-cancel-button {
         display: none;
