--- a/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SearchControls.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SearchControls.module.scss
@@ -12,6 +12,10 @@
     gap: $spacing-size-4;
     padding: $spacing-size-4 $spacing-size-6;
     border-top: 1px solid var(--color-border-primary);
+
+    @media screen and (max-width: $breakpoint-docs-search-small) {
+        display: none;
+    }
 }
 
 .keyboardSection {
