--- a/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SearchControls.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SearchControls.module.scss
@@ -11,6 +11,7 @@
     justify-content: flex-end;
     gap: $spacing-size-4;
     padding: $spacing-size-4 $spacing-size-6;
+    height: var(--controls-height);
     border-top: 1px solid var(--color-border-primary);
 
     @media screen and (max-width: $breakpoint-docs-search-small) {
