--- a/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SearchHits.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SearchHits.module.scss
@@ -1,11 +1,30 @@
 @use '../core' as *;
 
 .results {
+    position: relative;
     padding-top: $spacing-size-2;
+    padding-bottom: $spacing-size-4;
     font-size: 18px;
     border-top: 1px solid var(--color-border-primary);
     overflow: auto;
     overscroll-behavior: contain;
+
+    &::after {
+        content: '';
+        position: fixed;
+        width: 100%;
+        height: $spacing-size-24;
+        left: 0;
+        bottom: var(--controls-height);
+        background-image: linear-gradient(transparent, var(--color-bg-primary));
+        pointer-events: none;
+    }
+
+    // Prevent scroll indicator from effecting last item
+    > div:last-child .hit:last-child {
+        position: relative;
+        z-index: 1;
+    }
 
     @media screen and (min-width: $breakpoint-docs-search-small) {
         max-height: calc(100vh - 450px);
@@ -13,6 +32,7 @@
 }
 
 .hit {
+    position: relative;
     display: grid;
     grid-template:
         'icon title' min-content
@@ -24,6 +44,7 @@
 
     &[data-selected='true'] {
         background: rgba(4, 75, 147, 1);
+        z-index: 1;
     }
 }
 
