--- a/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SearchHits.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SearchHits.module.scss
@@ -82,6 +82,7 @@
     text-overflow: ellipsis;
     text-decoration: none;
     overflow: hidden;
+    font-size: var(--text-fs-base);
 
     [data-selected='true'] & {
         color: var(--color-bg-primary);
@@ -108,13 +109,15 @@
 }
 
 .crumbContainer {
-    padding: $spacing-size-4 0 $spacing-size-1 $spacing-size-8;
+    padding: $spacing-size-3 0 $spacing-size-3 $spacing-size-8;
 }
 
 .crumb {
     font-weight: var(--text-semibold);
     text-decoration: none;
     color: var(--color-text-primary);
+    font-size: var(--text-fs-base);
+
 
     #{$selector-darkmode} & {
         color: var(--color-white);
