AG-10421 Small spacing improvement on crumb

--- a/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SearchHits.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/modules/SearchHits.module.scss
@@ -110,6 +110,7 @@
 
 .crumbContainer {
     padding: $spacing-size-3 0 $spacing-size-3 $spacing-size-8;
+    padding-bottom: $spacing-size-2;
 }
 
 .crumb {
