--- a/grid-packages/ag-grid-docs/documentation/doc-pages/cell-editors/examples/component-editor-2/styles.css
+++ b/grid-packages/ag-grid-docs/documentation/doc-pages/cell-editors/examples/component-editor-2/styles.css
@@ -24,3 +24,10 @@
     width: 100%;
     height: 100%;
 }
+
+.my-simple-editor {
+    box-sizing: border-box;
+    padding-left: var(--ag-grid-size);
+    width: 100%;
+    height: 100%;
+}
