--- a/grid-packages/ag-grid-theme-builder/src/ag-grid-community-themes/parts/core/css/drag-and-drop.css
+++ b/grid-packages/ag-grid-theme-builder/src/ag-grid-community-themes/parts/core/css/drag-and-drop.css
@@ -13,18 +13,14 @@
   text-overflow: ellipsis;
   transform: translateY(calc(var(--ag-grid-size) * 2));
 
-  color: var(--ag-foreground-color);
+  background-color: var(--ag-drag-ghost-background-color);
+  color: var(--ag-text-color);
   font-weight: 500;
 
-  background-color: var(--ag-drag-ghost-background-color);
   border: var(--ag-drag-ghost-border);
   border-radius: var(--ag-border-radius);
   box-shadow: var(--ag-drag-ghost-shadow);
   padding-left: var(--ag-cell-horizontal-padding);
   padding-right: var(--ag-cell-horizontal-padding);
   gap: var(--ag-cell-widget-spacing);
-}
-
-.ag-dnd-ghost-icon {
-  color: var(--ag-foreground-color);
 }
