--- a/grid-packages/ag-grid-theme-builder/src/ag-grid-community-themes/parts/core/css/filter-tool-panel.css
+++ b/grid-packages/ag-grid-theme-builder/src/ag-grid-community-themes/parts/core/css/filter-tool-panel.css
@@ -98,5 +98,5 @@
 .ag-filter-toolpanel-header,
 .ag-filter-toolpanel-search {
   font-weight: 500;
-  color: var(--ag-header-foreground-color);
+  color: var(--ag-header-text-color);
 }
