--- a/grid-packages/ag-grid-theme-builder/src/ag-grid-community-themes/parts/core/css/header.css
+++ b/grid-packages/ag-grid-theme-builder/src/ag-grid-community-themes/parts/core/css/header.css
@@ -5,7 +5,7 @@
   white-space: nowrap;
   overflow: hidden;
   background-color: var(--ag-header-background-color);
-  color: var(--ag-header-foreground-color);
+  color: var(--ag-header-text-color);
   border-bottom: var(--ag-header-border);
   font-weight: var(--ag-header-font-weight);
   font-weight: 500;
