--- a/grid-packages/ag-grid-theme-builder/src/ag-grid-community-themes/parts/core/css/menu.css
+++ b/grid-packages/ag-grid-theme-builder/src/ag-grid-community-themes/parts/core/css/menu.css
@@ -7,7 +7,7 @@
   border-radius: var(--ag-border-radius);
   box-shadow: var(--ag-menu-shadow);
   background-color: var(--ag-menu-background-color);
-  color: var(--ag-menu-foreground-color);
+  color: var(--ag-menu-text-color);
 }
 
 .ag-menu-list {
@@ -253,7 +253,7 @@ TODO introduce variable
   padding: calc(var(--ag-grid-size) * 1.5) var(--ag-grid-size);
   background-color: transparent;
   font-weight: 500;
-  color: var(--ag-header-foreground-color);
+  color: var(--ag-header-text-color);
 
   &:focus-visible {
     /* TODO check this works properly */
