--- a/grid-packages/ag-grid-theme-builder/src/ag-grid-community-themes/parts/core/css/common-structural.css
+++ b/grid-packages/ag-grid-theme-builder/src/ag-grid-community-themes/parts/core/css/common-structural.css
@@ -43,8 +43,13 @@ ag-grid-aurelia {
   user-select: text;
 }
 
+.ag-tabs-header {
+  display: flex;
+}
+
 .ag-tab {
   position: relative;
+  cursor: pointer;
 }
 
 .ag-tab-guard {
