--- a/grid-packages/ag-grid-theme-builder/src/ag-grid-community-themes/parts/tab-style/tab-style-simple.css
+++ b/grid-packages/ag-grid-theme-builder/src/ag-grid-community-themes/parts/tab-style/tab-style-simple.css
@@ -1,5 +1,4 @@
 .ag-tabs-header {
-  background-color: var(--ag-tab-bar-background-color);
   border-bottom: var(--ag-tab-bar-border);
 }
 
@@ -9,9 +8,22 @@
   align-items: center;
   justify-content: center;
   padding: var(--ag-tab-padding);
-  border-left: solid 1px transparent;
-  border-right: solid 1px transparent;
+  border-left: var(--ag-tab-selected-border);
+  border-left-color: transparent;
+  border-right: var(--ag-tab-selected-border);
+  border-right-color: transparent;
   flex: 1;
+  background-color: var(--ag-tab-background-color);
+  color: var(--ag-tab-text-color);
+
+  &:hover {
+    background-color: var(--ag-tab-hover-background-color);
+    color: var(--ag-tab-hover-text-color);
+  }
+  &.ag-tab-selected {
+    background-color: var(--ag-tab-selected-background-color);
+    color: var(--ag-tab-selected-text-color);
+  }
 
   &::after {
     content: '';
@@ -53,12 +65,5 @@
   }
   &:not(:last-of-type) {
     border-right: var(--ag-tab-selected-border);
-  }
-}
-
-.ag-tab:not(.ag-tab-selected) {
-  opacity: 0.7;
-  &:hover {
-    opacity: 1;
   }
 }
